<resources>
    <string name="app_name">dr.AI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_dr_ai">Welcome to Dr.AI!</string>
    <string name="create_an_account">Create an account!</string>
    <string name="dr_ai">Dr.Ai</string>
    <string name="Name">Name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="email">Email</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="password">Password</string>
    <string name="what_s_your_password">What\'s your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="alreday_have_an_account">Alreday Have an Account?</string>
    <string name="id">Id</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_your_email_and_you_will_get_an_email_to_retrieve_your_password">Enter your email and you will get an email to retrieve your password</string>
    <string name="send_email">Send email</string>
    <string name="enter_you_email_and_a_link_will_be_send_to_retrieve_your_password">Enter you email and a link will be send to retrieve your password</string>
    <string name="virtual_therapist">Virtual Therapist</string>
    <string name="patient">Patient</string>
    <string name="appointment">Appointment</string>
    <string name="go_back">Go Back</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="privacy">Privacy</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="health_record">Health Record</string>
    <string name="check_up_appointment">Check-Up Appointment</string>
    <string name="home">Home</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="coming_appointments">Coming Appointments</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="prescription">Prescription</string>
    <string name="doctor_s_name">Doctor\'s Name:</string>
    <string name="blah_blah_alblah">Blah blah AlBlah</string>
    <string name="diagnosis_by">Diagnosis By:</string>
    <string name="prescription_by">Prescription By:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clinic_s_name">Clinic\'s Name</string>
    <string name="time">Time</string>
    <string name="session">Session</string>
    <string name="video">Video</string>
    <string name="chat">Chat</string>
    <string name="online_appointments">Online Appointments</string>
    <string name="check_up_appointment_by">Check-Up Appointment By:</string>
    <string name="_28th_of_august_10_50_pm">28th of august 10:50 pm</string>
    <string name="accept">Accept</string>
    <string name="choose_an_appointment">Choose an appointment</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="_27th_august_10_50pm">27th August 10:50pm</string>
    <string name="_24th_august_10_50pm">24th August 10:50pm</string>
    <string name="hello_my_name_is_sadeem">Hello! my name is Sadeem</string>
    <string name="sign_out">Sign Out</string>
    <string name="online">Online</string>
    <string name="type_of_session">Type of session</string>
    <string name="online_or_in_person">Online or in Person</string>
    <string name="online_os_in_person">Online os In-person</string>
    <string name="date_time">• Date / Time</string>
    <string name="track_patient">Track Patient</string>
    <string name="latest_analysis">Latest Analysis</string>
    <string name="analysis">Analysis</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="you_can_manage_doctors_and_patients_account_here">You can manage doctors and patients account here</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="doctors_s_name">Doctos\'s Name</string>
    <string name="doctor_s_name1">Doctor\'s Name</string>
    <string name="prescription1">• Prescription</string>
    <string name="reminder">Reminder</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="patient_s_password">Patient\'s Password</string>
    <string name="patient_s_phone_no">Patient\'s Phone No.</string>
    <string name="patient_s_city">Patient\'s City</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="password1">Password:</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="phone_no">Phone No:</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="city1">City:</string>
    <string name="enter_your_id">Enter your ID</string>
    <string name="enter_your_email">Enter your email?</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="name">Name:</string>
    <string name="title_activity_welcome_page">welcomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="jan_01_2022">Jan 01 2022</string>
    <string name="ask_me">Ask me</string>
</resources>