<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@drawable/forimageview"
    tools:context=".patientAppointmentSummary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lenear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/menuButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_menu_24" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="50dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="339dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="Dr.AI"
        android:textColorLink="@color/black"
        android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="385dp"
            android:layout_below="@id/lenear"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDoctorsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/doctor_s_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/doctorSpinner"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp" />

            <TextView
                android:id="@+id/TextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDate"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:onClick="openDatePicker"
                android:text="@string/jan_01_2022"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/TextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5sp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@drawable/edittext"
                android:onClick="popTimePicker"
                android:text="@string/time"
                android:textAlignment="center" />
        </LinearLayout>

    <Button
        android:id="@+id/summaryButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:text="@string/appointment_summary"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/main_nav_view"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"/>
    </androidx.drawerlayout.widget.DrawerLayout>