<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/forimageview"
    tools:context=".checkUpAppointments">


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="52dp"
        android:background="@color/black" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_baseline_menu_24" />


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="339dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="Dr.AI"
        android:textColorLink="@color/black"
        android:textSize="25sp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_marginTop="187dp">

        <GridLayout

            android:layout_width="406dp"
            android:layout_height="229dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="211dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textDateTime.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textDoctorsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/doctor_s_name1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTheDoctorsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_session"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/radioAccept"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:text="@string/accept" />

                <RadioButton
                    android:id="@+id/radioReject"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:text="@string/cancel" />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="172dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textDoctorsName.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/doctor_s_name1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTheDoctorsName.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_session"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/radioAccept.2"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:text="@string/accept" />

                <RadioButton
                    android:id="@+id/radioReject.2"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:text="@string/cancel" />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="172dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textDoctorsName.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/doctor_s_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTheDoctorsName.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_session"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/radioAccept.3"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:text="@string/accept" />

                <RadioButton
                    android:id="@+id/radioReject.3"
                    android:layout_width="102dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:text="@string/cancel" />
            </LinearLayout>


        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textPreviousAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topAppBar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:text="@string/check_up_appointment_by"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"/>
    </RelativeLayout>